<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/navpage"
    android:scrollbarThumbVertical="@drawable/scrollbar_handle_vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:paddingBottom="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/tests_numbers_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="8.0dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/setting_version"
                    android:textColor="@color/black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.0dip"
            android:text="@string/setting_contact"
            android:textColor="@color/gray"
            android:textSize="@dimen/BasicTextSize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="2.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/tests_choose_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="8.0dip" >

                <TextView
                    android:id="@+id/tests_choose_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/setting_author"
                    android:textColor="@color/black"
                    android:textSize="@dimen/BasicTextSize" />

                <TextView
                    android:id="@+id/tests_choose_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/setting_author_name"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:id="@+id/tests_des_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="8.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/setting_qq"
                    android:textColor="@color/black"
                    android:textSize="@dimen/BasicTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/setting_qq_num"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="8.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/setting_mail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/BasicTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/setting_mail_addr"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="8.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/setting_weibo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/BasicTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/setting_weibo_addr"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="8.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/setting_github"
                    android:textColor="@color/black"
                    android:textSize="@dimen/BasicTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/setting_github_addr"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.0dip"
            android:text="@string/setting_app_infor"
            android:textColor="@color/gray"
            android:textSize="@dimen/BasicTextSize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="2.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4.0dip"
                    android:text="@string/setting_copyright"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.0dip"
            android:text="@string/setting_author_is"
            android:textColor="@color/gray"
            android:textSize="@dimen/BasicTextSize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="2.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4.0dip"
                    android:text="@string/setting_author_fuck"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.0dip"
            android:text="@string/setting_app_for"
            android:textColor="@color/gray"
            android:textSize="@dimen/BasicTextSize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="2.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4.0dip"
                    android:text="@string/setting_for"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.0dip"
            android:text="@string/setting_suggest"
            android:textColor="@color/gray"
            android:textSize="@dimen/BasicTextSize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="2.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="40.0dip"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <EditText
                    android:id="@+id/suggest"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="left|top"
                    android:hint="@string/setting_hint"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:singleLine="false"
                    android:textColor="@color/path_black"
                    android:textSize="@dimen/BasicTextSize" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/send_suggest_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/suggest_btn_selected"
            android:text="@string/setting_send_suggest"
            android:textColor="@color/path_black"
            android:textSize="@dimen/BasicTextSize" />
    </LinearLayout>

</ScrollView>